Fix: Docker creation and conection with DB

--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -6,7 +6,7 @@ spring.datasource.username=SYSTEM
 spring.datasource.password=admin
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
-jpa.hibernate.ddl-auto=create
-jpa.show-sql=true
-jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
