--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=pdn
 spring.application.name=fixedAssets
 server.servlet.context-path=/fixed-Assets/api
 springdoc.swagger-ui.path=/swagger-ui.html
