--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=8090
 
 #Database
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=ASSETADMIN
+spring.datasource.username=system
 spring.datasource.password=admin
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
